--- a/index.html
+++ b/index.html
@@ -8,35 +8,74 @@
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;600;900&amp;display=swap" rel="stylesheet">
 </head>
 <body>
-    <header><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M48 64C21.5 64 0 85.5 0 112c0 15.1 7.1 29.3 19.2 38.4L236.8 313.6c11.4 8.5 27 8.5 38.4 0L492.8 150.4c12.1-9.1 19.2-23.3 19.2-38.4c0-26.5-21.5-48-48-48H48zM0 176V384c0 35.3 28.7 64 64 64H448c35.3 0 64-28.7 64-64V176L294.4 339.2c-22.8 17.1-54 17.1-76.8 0L0 176z"/></svg>
-        <div>hello@colorlib.com | Free Shipping for all Order of $99</div>
-    <svg id="redes" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M80 299.3V512H196V299.3h86.5l18-97.8H196V166.9c0-51.7 20.3-71.5 72.7-71.5c16.3 0 29.4 .4 37 1.2V7.9C291.4 4 256.4 0 236.2 0C129.3 0 80 50.5 80 159.4v42.1H14v97.8H80z"/></svg>
+    <header>
+        <div><svg id="email" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M48 64C21.5 64 0 85.5 0 112c0 15.1 7.1 29.3 19.2 38.4L236.8 313.6c11.4 8.5 27 8.5 38.4 0L492.8 150.4c12.1-9.1 19.2-23.3 19.2-38.4c0-26.5-21.5-48-48-48H48zM0 176V384c0 35.3 28.7 64 64 64H448c35.3 0 64-28.7 64-64V176L294.4 339.2c-22.8 17.1-54 17.1-76.8 0L0 176z"/></svg>hello@colorlib.com | Free Shipping for all Order of $99</div>
+        <div id="redes"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M80 299.3V512H196V299.3h86.5l18-97.8H196V166.9c0-51.7 20.3-71.5 72.7-71.5c16.3 0 29.4 .4 37 1.2V7.9C291.4 4 256.4 0 236.2 0C129.3 0 80 50.5 80 159.4v42.1H14v97.8H80z"/></svg>
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M459.4 151.7c.3 4.5 .3 9.1 .3 13.6 0 138.7-105.6 298.6-298.6 298.6-59.5 0-114.7-17.2-161.1-47.1 8.4 1 16.6 1.3 25.3 1.3 49.1 0 94.2-16.6 130.3-44.8-46.1-1-84.8-31.2-98.1-72.8 6.5 1 13 1.6 19.8 1.6 9.4 0 18.8-1.3 27.6-3.6-48.1-9.7-84.1-52-84.1-103v-1.3c14 7.8 30.2 12.7 47.4 13.3-28.3-18.8-46.8-51-46.8-87.4 0-19.5 5.2-37.4 14.3-53 51.7 63.7 129.3 105.3 216.4 109.8-1.6-7.8-2.6-15.9-2.6-24 0-57.8 46.8-104.9 104.9-104.9 30.2 0 57.5 12.7 76.7 33.1 23.7-4.5 46.5-13.3 66.6-25.3-7.8 24.4-24.4 44.8-46.1 57.8 21.1-2.3 41.6-8.1 60.4-16.2-14.3 20.8-32.2 39.3-52.6 54.3z"/></svg>
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"/></svg>
-
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M100.3 448H7.4V148.9h92.9zM53.8 108.1C24.1 108.1 0 83.5 0 53.8a53.8 53.8 0 0 1 107.6 0c0 29.7-24.1 54.3-53.8 54.3zM447.9 448h-92.7V302.4c0-34.7-.7-79.2-48.3-79.2-48.3 0-55.7 37.7-55.7 76.7V448h-92.8V148.9h89.1v40.8h1.3c12.4-23.5 42.7-48.3 87.9-48.3 94 0 111.3 61.9 111.3 142.3V448z"/></svg>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M204 6.5C101.4 6.5 0 74.9 0 185.6 0 256 39.6 296 63.6 296c9.9 0 15.6-27.6 15.6-35.4 0-9.3-23.7-29.1-23.7-67.8 0-80.4 61.2-137.4 140.4-137.4 68.1 0 118.5 38.7 118.5 109.8 0 53.1-21.3 152.7-90.3 152.7-24.9 0-46.2-18-46.2-43.8 0-37.8 26.4-74.4 26.4-113.4 0-66.2-93.9-54.2-93.9 25.8 0 16.8 2.1 35.4 9.6 50.7-13.8 59.4-42 147.9-42 209.1 0 18.9 2.7 37.5 4.5 56.4 3.4 3.8 1.7 3.4 6.9 1.5 50.4-69 48.6-82.5 71.4-172.8 12.3 23.4 44.1 36 69.3 36 106.2 0 153.9-103.5 153.9-196.8C384 71.3 298.2 6.5 204 6.5z"/></svg> 
+    <div id="language">| <img src="language.png" height="15px">English | <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z"/></svg> login</div></div>
+    
+    
     </header>
     <div id="main">
         <div id="logo">
             <img src="logo.png.webp">
         </div>
-        <div id="menu">menu</div>
+        <div id="menu">
+        <div id="alldepart">all departaments</div>
+        </div>
         <div id="nav">
+            <div id="nav-drop"></div>
             <div>HOME</div>
-            <div>SHOP</div>
-            <div>PAGES</div>
+            <div> <a href="shop.html">SHOP</a></div>
+            <div id="drop">PAGES
+                <ul id="menu-drop">
+                <div><a href="">Shopping Details</a></div>
+                <div>Shop Cart</div>
+                <div> Check out</div>
+                <div>Blog Details</div>
+                </ul>
+            </div>
             <div>BLOG</div>
-            <div>CONTACT</div>
+            <div><a href="contact.html">CONTACT</a></div>
+            <div id="item"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M47.6 300.4L228.3 469.1c7.5 7 17.4 10.9 27.7 10.9s20.2-3.9 27.7-10.9L464.4 300.4c30.4-28.3 47.6-68 47.6-109.5v-5.8c0-69.9-50.5-129.5-119.4-141C347 36.5 300.6 51.4 268 84L256 96 244 84c-32.6-32.6-79-47.5-124.6-39.9C50.5 55.6 0 115.2 0 185.1v5.8c0 41.5 17.2 81.2 47.6 109.5z"/></svg>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M160 112c0-35.3 28.7-64 64-64s64 28.7 64 64v48H160V112zm-48 48H48c-26.5 0-48 21.5-48 48V416c0 53 43 96 96 96H352c53 0 96-43 96-96V208c0-26.5-21.5-48-48-48H336V112C336 50.1 285.9 0 224 0S112 50.1 112 112v48zm24 48a24 24 0 1 1 0 48 24 24 0 1 1 0-48zm152 24a24 24 0 1 1 48 0 24 24 0 1 1 -48 0z"/></svg>
+            <div> item: $150.00</div></div>
         </div>
         <div id="busca">
-            <div class="all">all categories</div>
-            <div class="search">search</div>
+            <div id="all">All Categories</div>
+            <div id="textobus">What do you need?</div>
+            <div id="search">search</div>
         </div>
-        <div id="banner">banner</div>
-        <div id="prod01">prod01</div>
-        <div id="prod02">prod02</div>
-        <div id="prod03">prod03</div>
-        <div id="prod04">prod04</div>
+        <div id="banner">
+            <div id="fresh">FRESH FRUIT</div>
+            <div id="vegetables"><div>Vegetable <br>100% Organic</div></div>
+            <div id="Pickup">Free Pickup and Delivery Available</div>
+            <div id="shopnow">SHOP NOW</div>
+        </div>
+        <div id="prod01">
+            <div id="dried">dried fruit</div>
+        </div>
+        <div id="prod02">
+            <div>fresh fruits</div>
+        </div>
+        <div id="prod03">
+            <div>vegetables</div>
+        </div>
+        <div id="prod04">
+            <div>drink fruits</div>
+        </div>
     </div>
+    <div id="titulo2">Featured Product</div>
+    <div id="verdin"></div>
+    <div id="titulo">
+        <div>All</div>
+        <div>Oranges</div>
+        <div>Fresh Meat</div>
+        <div>Vegetables</div>
+        <div>Fastfood</div>
+        </div>
     <div id="produtos">
             <div><img src="feature-1.jpg" alt=""></div> 
             <div><img src="feature-2.jpg" alt=""></div> 
@@ -55,5 +94,81 @@
             <div id="fontes">Crab Pool Security <br> $30.00</div>
             <div id="fontes">Crab Pool Security <br> $30.00</div>
     </div>
+    <div id="banners">
+        <img src="banner-1.jpg" alt="">
+        <img src="banner-2.jpg" alt="">
+    </div>
+    <div id="produtos2">
+    <div id="latest">Latest Products
+        <div id="crab"><img src="lp-1.jpg"><div>Crab Pool Security<br>$30.00</div></div>
+        <div id="crab"><img src="lp-2.jpg"><div>Crab Pool Security<br>$30.00</div></div>
+        <div id="crab"><img src="lp-3.jpg"><div>Crab Pool Security<br>$30.00</div></div>
+    </div>
+    <div id="top">Top Rated Products
+        <div id="crab"><img src="lp-1.jpg"><div>Crab Pool Security<br>$30.00</div></div>
+        <div id="crab"><img src="lp-2.jpg"><div>Crab Pool Security<br>$30.00</div></div>
+        <div id="crab"><img src="lp-3.jpg"><div>Crab Pool Security<br>$30.00</div></div>
+    </div>
+    <div id="review">Review Products
+        <div id="crab"><img src="lp-1.jpg"><div>Crab Pool Security<br>$30.00</div></div>
+        <div id="crab"><img src="lp-2.jpg"><div>Crab Pool Security<br>$30.00</div></div>
+        <div id="crab"><img src="lp-3.jpg"><div>Crab Pool Security<br>$30.00</div></div>
+    </div>
+    </div>
+   
+    <div id="fromtheblog">From the blog</div>
+    <div id="verdin"></div>
+    <div id="blog">
+    <div><img src="blog-1.jpg">
+    <div id="blogtitle">Cooking tips make cooking simple</div>
+    <div>Sed quia non numquam modi tempora indunt ut <br> labore et dolore magnam aliquam quaerat</div>
+</div>
+    <div><img src="blog-2.jpg">
+    <div id="blogtitle">6 ways to prepare breakfast for 30</div>
+    <div>sed quia non numquam modi tempora indunt ut <br> labore et dolore magnam aliquam quaerat</div>
+</div>
+    <div><img src="blog-3.jpg">
+    <div id="blogtitle">Visit the clean farm in the US</div>
+    <div id="textinho">sed quia non numquam modi tempora indunt ut <br> labore et dolore magnam aliquam quaerat</div>
+    </div>
+</div>
+<div id="descricao">
+    <div id="part1"><img src="logo.png.webp">
+    <div>Address: 60-49 Road 11378 New york</div>
+    <div>Phone: +65 11.188.888</div>
+    <div>Email: hello@colorlib.com</div>
+    </div>
+
+    <div id="Useful"> <b>Useful Links</b>
+    <div>About Us</div>
+    <div>About Our Shop</div>
+    <div>Secure Shopping</div>
+    <div>Delivery infomation</div>
+    <div>Privacy Policy</div>
+    <div>Our Sitemap</div>
+    </div>
+
+    <div id="whoweare">Who We Are
+    <div>Our Services</div>
+    <div>Projects</div>
+    <div>contact</div>
+    <div>innovation</div>
+    <div>testimonials</div>
+    </div>
+
+    <div id="join"> <b>Join Our Newsletter Now</b>
+        <div>Get E-mail updates about our latest shop and special offers. </div>
+            <div id="enter">enter your mail
+                <div id="subscribe">subscribe</div>
+            </div>    
+    </div>
+</div>
+<div id="descricao2">
+    <div id="copyright">
+    Copyright ©2024 All rights reserved | This template is made with 
+    <svg id="svgheart" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M47.6 300.4L228.3 469.1c7.5 7 17.4 10.9 27.7 10.9s20.2-3.9 27.7-10.9L464.4 300.4c30.4-28.3 47.6-68 47.6-109.5v-5.8c0-69.9-50.5-129.5-119.4-141C347 36.5 300.6 51.4 268 84L256 96 244 84c-32.6-32.6-79-47.5-124.6-39.9C50.5 55.6 0 115.2 0 185.1v5.8c0 41.5 17.2 81.2 47.6 109.5z"/></svg>
+     by Colorlib</div>
+    <div id="imagem"><img src="payment-item.png"></div>
+</div>
 </body>
 </html>
