--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
         </div>
         <div id="nav">
             <div id="nav-drop"></div>
-            <div>HOME</div>
+            <div><a href="index.html">Home</a></div>
             <div> <a href="shop.html">SHOP</a></div>
             <div id="drop">PAGES
                 <ul id="menu-drop">
