--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <div id="nav">
             <div id="nav-drop"></div>
-            <div><a href="contact.html">home</a></div>
+            <div><a href="index.html">home</a></div>
             <div> <a href="shop.html">SHOP</a></div>
             <div id="drop">PAGES
                 <ul id="menu-drop">
